// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ModelFilterFloat > adds max as a prop 1`] = `
<DocumentFragment>
  <input
    aria-invalid="false"
    autocomplete="off"
    class="form-control"
    id="dummy"
    max="5"
    name="dummy"
    path="dummy"
    type="number"
  />
</DocumentFragment>
`;

exports[`ModelFilterFloat > adds max as a prop with exclusiveMaximum 1`] = `
<DocumentFragment>
  <input
    aria-invalid="false"
    autocomplete="off"
    class="form-control"
    id="dummy"
    max="4.999999999999999"
    name="dummy"
    path="dummy"
    type="number"
  />
</DocumentFragment>
`;

exports[`ModelFilterFloat > adds min as a prop 1`] = `
<DocumentFragment>
  <input
    aria-invalid="false"
    autocomplete="off"
    class="form-control"
    id="dummy"
    min="5"
    name="dummy"
    path="dummy"
    type="number"
  />
</DocumentFragment>
`;

exports[`ModelFilterFloat > adds min as a prop with exclusiveMinimum 1`] = `
<DocumentFragment>
  <input
    aria-invalid="false"
    autocomplete="off"
    class="form-control"
    id="dummy"
    min="5.000000000000001"
    name="dummy"
    path="dummy"
    type="number"
  />
</DocumentFragment>
`;
